--- a/trello/client/package.json
+++ b/trello/client/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
     "styled-components": "^5.0.1",
+    "styled-normalize": "^8.0.7",
     "typescript": "^3.8.3"
   },
   "scripts": {
