Solve module resolution

--- a/trello/client/tsconfig.json
+++ b/trello/client/tsconfig.json
@@ -18,7 +18,8 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react",
-    "types": ["node", "jest"]
+    "types": ["node", "jest"],
+    "baseUrl": "src"
   },
   "include": [
     "./**/*"
